[package]
name = "annisonic"
version = "0.1.0"
authors = ["Yesterday17 <mmf@mmf.moe>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
actix-service = "2.0.0"
actix-utils = "3.0.0"

anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.3"

quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"
